# zorvyn-assignment

./: .gitattributes  .gitignore  PROBLEM.md  README.md  main.py  pyproject.toml
core/: debug.py  dependencies.py  environ.py  lifespan.py  logger.py  settings.py
models/: records.py  user.py
routes/: dashboard.py  records.py
schemas/: record.py
utils/: security.py
