[project]
name = "zorvyn-assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "Biswajit Das",email = "mrbiswajitdas3@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)"
]

[dependency-groups]
dev = [
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
